# frontend

./: .babelrc  .eslintrc  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  LICENSE  Makefile  README.md  eslint.config.js  frontend.dia  index.html  name.ini  package-lock.json  package.json  package.json.tpl  razzle.config.js  requirements.yml  rollup.config.js  styleguide.config.js  svelte.config.js  tsconfig.json  vite.config.ts  webpack.common.js  webpack.config.js
.github/workflows/: nodejs.yml
omemo/: Cargo.toml
omemo/src/: crypto.rs  lib.rs  store.rs  wasm.rs
public/: index.html  manifest.json
scripts/: build-omemo.sh
src/: App.css  App.js  Provider.js  TestApp.js  app.d.ts  app.html  auth.js  chota.d.ts  client.js  constants.js  index.js  lib.js  mock.js  prod-conf.js  reducers.js  reset.css  reset.js  routing.js  server.js  setupProxy.js  setupTests.js  store-provider.js  store.js  styles.js  theme.js  utils.js
src/components/: index.js
src/containers/: main.js  root.js
src/lib/: BlogPostPublic.svelte  BlogPosts.svelte  BlogPublic.svelte  BlogTagPosts.svelte  BlogTags.svelte  Boards.svelte  Calendar.svelte  Chat.svelte  Contacts.svelte  Course.svelte  CourseGroupMembers.svelte  Courses.svelte  Domain.svelte  Domains.svelte  Files.svelte  Git.svelte  GitBrowser.svelte  GitDetail.svelte  Group.svelte  Groups.svelte  Input.svelte  Jabber.svelte  KanbanBoard.svelte  KanbanColumn.svelte  KanbanTask.svelte  Lecture.svelte  Lectures.svelte  LeftPane.svelte  Login.svelte  Mail.svelte  MailCompose.svelte  MailLayout.svelte  MailingListArchivePublic.svelte  MenuBar.svelte  (+41 more)
templates/: site.yml.tpl
(+333 files in other folders)
