[package]
name = "freenit-omemo"
version = "0.1.0"
edition = "2021"
authors = ["Goran Mekić <meka@tilda.center>"]
license = "BSD-2-Clause"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.125"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
dziber-omemo = "0.0.3"
rand = "0.8"
base64 = "0.22"
bincode = "1"
console_error_panic_hook = "0.1"

# getrandom 0.2 is pulled in via dziber-omemo -> rand 0.8 -> rand_core -> getrandom.
# The "js" feature is required for wasm32-unknown-unknown.
getrandom = { version = "0.2", features = ["js"] }

[profile.release]
opt-level = 3
lto = true
